Plug in deployment options to the back end (and have all deployment options selected by default)